fix parallax visit size, remove inner border about, map colors update, banner scroll speed, footer layout on safari

--- a/components/AboutSection/about.module.scss
+++ b/components/AboutSection/about.module.scss
@@ -68,7 +68,7 @@
     border-bottom: vars.$border-width solid vars.$black;
     padding: 15px;
     .aboutWrapper {
-      border: vars.$border-width solid vars.$black;
+      // border: vars.$border-width solid vars.$black;
       height: calc(100vh - 30px);
       padding: 30px;
       width: calc(100vw - 30px);
